--- a/PuntoDeVenta/PuntoDeVenta.csproj
+++ b/PuntoDeVenta/PuntoDeVenta.csproj
@@ -86,6 +86,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App-Code\SQLServer\SQLManager.cs" />
     <Compile Include="inicio.aspx.cs">
       <DependentUpon>inicio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
