--- a/PuntoDeVenta/PuntoDeVenta.csproj
+++ b/PuntoDeVenta/PuntoDeVenta.csproj
@@ -59,62 +59,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="admin.aspx" />
-    <Content Include="assets\chart-master\Chart.js" />
-    <Content Include="assets\fullcalender\fullcalender\bootstrap-fullcalendar.css" />
-    <Content Include="assets\fullcalender\fullcalender\fullcalendar.css" />
-    <Content Include="assets\fullcalender\fullcalender\fullcalendar.js" />
-    <Content Include="assets\jquery-easy-pie-chart\jquery.easy-pie-chart.css" />
-    <Content Include="assets\jquery-easy-pie-chart\jquery.easy-pie-chart.js" />
-    <Content Include="assets\jquery-knob\js\jquery.knob.js" />
     <Content Include="Cliente.aspx" />
-    <Content Include="css\bootstrap-theme.css" />
-    <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
-    <Content Include="css\elegant-icons-style.css" />
-    <Content Include="css\font-awesome.min.css" />
-    <Content Include="css\fullcalendar.css" />
-    <Content Include="css\jquery-jvectormap-1.2.2.css" />
-    <Content Include="css\jquery-ui-1.10.4.min.css" />
     <Content Include="css\jquery.dataTables.min.css" />
-    <Content Include="css\owl.carousel.css" />
-    <Content Include="css\style-responsive.css" />
     <Content Include="css\style.css" />
     <Content Include="css\Login.css" />
-    <Content Include="css\stylish-portfolio.css" />
-    <Content Include="css\widgets.css" />
-    <Content Include="css\xcharts.min.css" />
     <Content Include="Empleado.aspx" />
-    <Content Include="Front\css\font-awesome.min.css" />
     <Content Include="inicio.aspx" />
-    <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
-    <Content Include="js\calendar-custom.js" />
-    <Content Include="js\charts.js" />
-    <Content Include="js\easy-pie-chart.js" />
-    <Content Include="js\fullcalendar.min.js" />
-    <Content Include="js\Funciones.js" />
-    <Content Include="js\gdp-data.js" />
-    <Content Include="js\jquery-1.8.3.min.js" />
-    <Content Include="js\jquery-3.1.0.min.js" />
-    <Content Include="js\jquery-jvectormap-1.2.2.min.js" />
-    <Content Include="js\jquery-jvectormap-world-mill-en.js" />
-    <Content Include="js\jquery-ui-1.10.4.min.js" />
-    <Content Include="js\jquery-ui-1.9.2.custom.min.js" />
-    <Content Include="js\jquery.autosize.min.js" />
     <Content Include="js\jquery.dataTables.min.js" />
     <Content Include="js\jquery.js" />
-    <Content Include="js\jquery.min.js" />
-    <Content Include="js\jquery.nicescroll.js" />
-    <Content Include="js\jquery.placeholder.min.js" />
-    <Content Include="js\jquery.rateit.min.js" />
-    <Content Include="js\jquery.scrollTo.min.js" />
-    <Content Include="js\jquery.slimscroll.min.js" />
-    <Content Include="js\jquery.sparkline-11.js" />
-    <Content Include="js\morris.min.js" />
-    <Content Include="js\owl.carousel.js" />
-    <Content Include="js\sparkline-chart.js" />
-    <Content Include="js\sparklines.js" />
-    <Content Include="js\xcharts.min.js" />
+    <Content Include="js\Login.js" />
     <Content Include="Login.aspx" />
     <Content Include="PuntoDeVenta.Master" />
     <Content Include="admin.Master" />
@@ -126,9 +81,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="scripts\ai.0.22.9-build00167.js" />
-    <Content Include="scripts\ai.0.22.9-build00167.min.js" />
-    <Content Include="scripts\Login.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
