--- a/PuntoDeVenta/PuntoDeVenta.csproj
+++ b/PuntoDeVenta/PuntoDeVenta.csproj
@@ -61,6 +61,7 @@
     <Content Include="admin.aspx" />
     <Content Include="Cliente.aspx" />
     <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\Cliente.css" />
     <Content Include="css\jquery.dataTables.min.css" />
     <Content Include="css\style.css" />
     <Content Include="css\Login.css" />
