--- a/PuntoDeVenta/PuntoDeVenta.csproj
+++ b/PuntoDeVenta/PuntoDeVenta.csproj
@@ -72,6 +72,7 @@
     <Content Include="js\jquery.js" />
     <Content Include="js\Login.js" />
     <Content Include="Login.aspx" />
+    <Content Include="Proveedor.aspx" />
     <Content Include="PuntoDeVenta.Master" />
     <Content Include="admin.Master" />
     <None Include="Web.Debug.config">
@@ -129,6 +130,13 @@
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor.aspx.cs">
+      <DependentUpon>Proveedor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Proveedor.aspx.designer.cs">
+      <DependentUpon>Proveedor.aspx</DependentUpon>
+    </Compile>
     <Compile Include="PuntoDeVenta.Master.cs">
       <DependentUpon>PuntoDeVenta.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
